--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
 
       <div id="banner">
         <span id="logo"></span>
-
+        
+        <a href="/" class="button"><i class="fa fa-home"></i></a>
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
