--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
       <div id="banner">
         <span id="logo"></span>
         
-        <a href="{{ site.github.page_url }}" class="button fork"><i class="fa fa-home"></i></a>
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="/"                                class="button fork"><i class="fa fa-home"></i></a>
+        <!--<a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>-->
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
