--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,6 @@
 	<meta name="description" content="Resum of Ana Nurdiana">
 	<meta name="author" content="Ana Nurdiana">
 
-	<!-- <title>Resume - Ana Nurdiana</title> -->
 	{% seo %}
 
 	<!-- Bootstrap core CSS -->
@@ -69,11 +68,11 @@
 
 		<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
 			<div class="w-100">
-				<h1 class="mb-0">Ana
-					<span class="text-primary">Nurdiana</span>
+				<h1 class="mb-0">
+					{{ site.name | page.title | default: site.title | default: site.github.repository_name }}</span>
 				</h1>
-				<div class="subheading mb-5">Cibening · Bungursari · Purwakarta · 41181 ·
-					<a href="mailto:ananurdiana@email.com">ananurdiana@email.com</a>
+				<div class="subheading mb-5">
+					{{ page.description | default: site.description | default: site.github.project_tagline }}
 				</div>
 				<p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level
 					overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall
@@ -96,6 +95,10 @@
 		</section>
 
 		<hr class="m-0">
+
+		<section class="resume-section p-3 p-lg-5 d-flex align-items-center">
+			{{ content }}
+		</section>
 
 		<section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
 			<div class="w-100">
