--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,10 +97,12 @@
 		<hr class="m-0">
 
 		<section class="resume-section p-3 p-lg-5 d-flex align-items-center">
-			{{ content }}
+			<div class="w-100">
+				{{ content }}
+			</div>
 		</section>
 
-		<section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+		<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
 			<div class="w-100">
 				<h2 class="mb-5">Experience</h2>
 
@@ -140,125 +142,6 @@
 			</div>
 
 		</section>
-
-		<hr class="m-0">
-
-		<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-			<div class="w-100">
-				<h2 class="mb-5">Education</h2>
-
-				<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-					<div class="resume-content">
-						<h3 class="mb-0">Widyatama University</h3>
-						<div class="subheading mb-3">Bachelor of Engineering</div>
-						<div>Technical Information</div>
-						<!-- <p>GPA: 3.48</p> -->
-					</div>
-					<div class="resume-date text-md-right">
-						<span class="text-primary">2013 - 2015</span>
-					</div>
-				</div>
-
-				<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-					<div class="resume-content">
-						<h3 class="mb-0">Politeknik LP3I Bandung </h3>
-						<div class="subheading mb-3">Diploma of Informatic Management</div>
-						<div>Informatic Management</div>
-						<!-- <p>GPA: 3.67</p> -->
-					</div>
-					<div class="resume-date text-md-right">
-						<span class="text-primary">2010 - 2013</span>
-					</div>
-				</div>
-
-				<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-					<div class="resume-content">
-						<h3 class="mb-0">SMAN 1 Banjar</h3>
-						<div class="subheading mb-3">Natural Science</div>
-						<!-- <p>GPA: 3.56</p> -->
-					</div>
-					<div class="resume-date text-md-right">
-						<span class="text-primary">2007 - 2010</span>
-					</div>
-				</div>
-
-			</div>
-		</section>
-
-		<hr class="m-0">
-
-		<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-			<div class="w-100">
-				<h2 class="mb-5">Skills</h2>
-
-				<div class="subheading mb-3">Programming Languages &amp; Tools</div>
-				<ul class="list-inline dev-icons">
-					<li class="list-inline-item">
-						<i class="fab fa-php" title="PHP"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-html5" title="HTML5"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-css3-alt" title="CSS3"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-js-square" title="JavaScript"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-node-js" title="NodeJS"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-npm" title="NPM"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-react" title="React Native"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-java" title="Java SE"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-microsoft" title="Microsoft .Net Framework (Visual Basic and C#)"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-linux" title="Linux User and Administrator"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-windows" title="Windows User and Administrator"></i>
-					</li>
-					<li class="list-inline-item">
-						<i class="fab fa-git-alt" title="GIT version control system"></i>
-					</li>
-
-				</ul>
-
-				<div class="subheading mb-3">Workflow</div>
-				<ul class="fa-ul mb-0">
-					<li>
-						<i class="fa-li fa fa-check"></i>
-						Multi Platform Programmer</li>
-					<li>
-						<i class="fa-li fa fa-check"></i>
-						Cross Functional Teams</li>
-
-				</ul>
-			</div>
-		</section>
-
-		<hr class="m-0">
-
-		<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-			<div class="w-100">
-				<h2 class="mb-5">Interests</h2>
-				<p>Apart from being a developer, I enjoy most of my time being outdoors. I enjoy biking, and traveling.</p>
-				<p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows,
-					I am a gamer (but not profesional gamer), and I spend a large amount of my free time to read my favorite book
-					and exploring the latest technology advancements.</p>
-			</div>
-		</section>
-
-		<hr class="m-0">
-
 	</div>
 
 	<!-- Bootstrap core JavaScript -->
