--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,9 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<nav>
+				<ul class="navbar-nav"></ul>
+			</nav>
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -74,23 +77,6 @@
 				<div class="subheading mb-5">
 					{{ page.description | default: site.description | default: site.github.project_tagline }}
 				</div>
-				<p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level
-					overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall
-					value proposition.</p>
-				<div class="social-icons">
-					<a href="https://www.linkedin.com/in/ana-nurdiana/">
-						<i class="fab fa-linkedin-in"></i>
-					</a>
-					<a href="https://github.com/ananurdiana">
-						<i class="fab fa-github"></i>
-					</a>
-					<a href="https://www.instagram.com/kanganan/">
-						<i class="fab fa-instagram"></i>
-					</a>
-					<a href="https://www.facebook.com/kang.anan.91">
-						<i class="fab fa-facebook-f"></i>
-					</a>
-				</div>
 			</div>
 		</section>
 
@@ -102,46 +88,7 @@
 			</div>
 		</section>
 
-		<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
-			<div class="w-100">
-				<h2 class="mb-5">Experience</h2>
-
-				<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-					<div class="resume-content">
-						<h3 class="mb-0">Analysis Programmer</h3>
-						<div class="subheading mb-3">PT UTAC Manufacturing Services Indonesia</div>
-						<p>Development program and maintenance Manufacturing Execution System.</p>
-					</div>
-					<div class="resume-date text-md-right">
-						<span class="text-primary">September 2014 - Present</span>
-					</div>
-				</div>
-
-				<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-					<div class="resume-content">
-						<h3 class="mb-0">Funding Officer</h3>
-						<div class="subheading mb-3">Bank BTN Purwakarta</div>
-						<!-- <p>Customer relationship.</p> -->
-					</div>
-					<div class="resume-date text-md-right">
-						<span class="text-primary">March 2013 - February 2014</span>
-					</div>
-				</div>
-
-				<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-					<div class="resume-content">
-						<h3 class="mb-0">Teacher</h3>
-						<div class="subheading mb-3">LPIA Purwakarta</div>
-						<p>Teach Java Programming Language, PHP Programming Language, MySQL DBMS, Microsoft Office (Word, Excel,
-							PowerPoint)</p>
-					</div>
-					<div class="resume-date text-md-right">
-						<span class="text-primary">February 2012 - February 2013</span>
-					</div>
-				</div>
-			</div>
-
-		</section>
+		
 	</div>
 
 	<!-- Bootstrap core JavaScript -->
