--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,11 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<nav>
-				<ul class="navbar-nav"></ul>
-			</nav>
+			<div class="wrapper">
+			      <nav>
+				<ul></ul>
+			      </nav>
+			</div>
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link js-scroll-trigger" href="#about">About</a>
