--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,22 +38,26 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<div class="wrapper">
-			      <nav>
-				<ul></ul>
-			      </nav>
-			</div>
-			<!--
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#about">About</a>
+				  <a class="nav-link js-scroll-trigger" href="/#about">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+				  <a class="nav-link js-scroll-trigger" href="/#experience">Experience</a>
 				</li>
-				
+				<li class="nav-item">
+				  <a class="nav-link js-scroll-trigger" href="/#education">Education</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link js-scroll-trigger" href="/#skills">Skills</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link js-scroll-trigger" href="/#interests">Interests</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link js-scroll-trigger" href="/blog">Blog</a>
+				</li>
 			</ul>
-			-->
 		</div>
 	</nav>
 
