--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
 
 	<!-- Custom scripts for this template -->
 	<script src="/js/resume.min.js"></script>
-	<script src="/js/main.blog.js"></script>
+	<script src="https://raw.githubusercontent.com/ananurdiana/ananurdiana.github.io/master/js/main.blog.js"></script>
 
 </body>
 
